--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
 .navbar {
     position: absolute;
     width: 100%;
+    padding: 20px;
     top: 10px;
     z-index: 99;
 }
@@ -40,7 +41,7 @@ body {
     right: 0px;
     opacity: 0.1;
     border-radius: 50%;
-    z-index: 1;
+    z-index: 99999;
 }
 
 .dropdown {
